# bastion

./: .gitignore  README.md
.github/workflows/: android.yml  ci.yml  desktop-linux.yml  desktop-macos.yml  desktop-windows.yml  ios.yml
android/: index.html  package-lock.json  package.json  vite.config.ts
android/src-tauri/: Cargo.toml  tauri.conf.json
deploy/: .env.example  Caddyfile.example  Dockerfile.server  Dockerfile.web  docker-compose.dev.yml  docker-compose.yml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
docs/: websocket-protocol.md
ios/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ios/src-tauri/: Cargo.toml  tauri.conf.json
server/: .golangci.yml  Makefile  go.mod  go.sum  migrations.go
server/migrations/: 001_initial.down.sql  001_initial.up.sql  002_phase2.down.sql  002_phase2.up.sql  003_phase3.down.sql  003_phase3.up.sql  004_phase4.down.sql  004_phase4.up.sql  005_phase5.up.sql  006_phase6.down.sql  006_phase6.up.sql  007_dm_close.down.sql  007_dm_close.up.sql  008_webhooks_bots.down.sql  008_webhooks_bots.up.sql  009_embeds.down.sql  009_embeds.up.sql  010_interactions.down.sql  010_interactions.up.sql  011_webhook_token_hash.down.sql  011_webhook_token_hash.up.sql  012_bot_token_lookup.down.sql  (+15 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
(+210 files in other folders)
